# DNA

./: .env.example  .env.template  .gitattributes  .gitignore  APPLY_MIGRATION_003.md  ARCHITECTURE.md  CERTIFICATION_SYSTEM_COMPLETE.md  CUSTOMER_FIELDS_COMPLETE.md  CUSTOMER_MANAGEMENT_PLAN.md  DATABASE_RELATIONSHIPS.md  FILES_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPROVED_SCHEMA_DESIGN.md  ISMS 02 Information security policy.docx  ISMS 10 Business continuity plan.docx  ISMS 21 Secure Development.docx  ISO_CERTIFICATION_PLAN.md  MIGRATION_003_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_1_IMPLEMENTATION.md  README.md  START_HERE.md  TEMPLATE_SYSTEM_APPROACH.md  auth_response.json  check_and_cleanup.py  check_constraints.py  check_plan_state.py  cleanup_data.sql  docker-compose.yml  fix-opacity.js  fix-phase3c-components.md  fix-tailwind-classes.js  fix_template_files_view.sql  fix_template_structures.sql  insert_iso_standards.sql  progress.md  pytest.ini  rules.md  start.bat  (+12 more)
ai-service/: Dockerfile  POLISH_COMPLETE.md  QUICK_REFERENCE.md  README.md  cleanup_job.py  config.py  db_client.py  gemini_client.py  health_publisher.py  llm_client.py  main.py  openai_client.py  progress_publisher.py  redis_client.py  requirements.txt  stream_consumer.py  telemetry.py  template_validator.py  test_gemini_json.py
auth_service/: Dockerfile  ROLES_MIGRATION.sql  main.py  (+2 more)
customer-portal/backend/: .env.example  Dockerfile  pyproject.toml
customer-portal/backend/app/: config.py  db.py  main.py  upload.py
customer-portal/backend/app/routes/: chat.py  portal.py
(+383 files in other folders)
